# inno

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: dump.rs
src/: error.rs  header.rs  installer.rs  lib.rs  version.rs
src/analysis/: exec.rs  mod.rs  registryop.rs  shortcut.rs
src/analysis/compiledcode/: innoapi.rs  mod.rs
src/crypto/: arc4.rs  kdflegacy.rs  mod.rs  pbkdf2.rs  xchacha20.rs
src/decompress/: block.rs  mod.rs
src/extract/: bcj.rs  checksum.rs  chunk.rs  file.rs  mod.rs  slice.rs
src/overlay/: mod.rs  offsettable.rs  pe.rs
src/records/: component.rs  dataentry.rs  delete.rs  directory.rs  file.rs  icon.rs  ini.rs  isssigkey.rs  item.rs  language.rs  message.rs  mod.rs  permission.rs  registry.rs  run.rs  task.rs  type_.rs  windows.rs
src/util/: checksum.rs  encoding.rs  mod.rs  read.rs
tests/: integration.rs
tests/samples/: README.md
tests/samples/encrypted/: payload.txt
